Стандартизировал вывод методов GetAllSongs и GetSongVerses
